force-app/main/default/objects/GLBP1_Beneficiario_de_Poliza__c/GLBP1_Beneficiario_de_Poliza__c.object-meta.xml
<CustomObject>
    <label>Beneficiario de Póliza</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiarios de Póliza</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>