force-app/main/default/objects/GLBP1_Beneficiario_de_Poliza__c/fields/GLB_P1_NombrePoliza__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NombrePoliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Beneficiario de Póliza</relationshipLabel>
    <relationshipName>Beneficiarios_de_poliza</relationshipName>
    <type>Lookup</type>
</CustomField>