force-app/main/default/objects/GLBP1_Beneficiario_de_Poliza__c/fields/GLB_P1_Parentesco__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Parentesco__c</fullName>
    <label>Parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cónyuge</fullName>
            </value>
            <value>
                <fullName>Hermana</fullName>
            </value>
            <value>
                <fullName>Hermano</fullName>
            </value>
            <value>
                <fullName>Hija</fullName>
            </value>
            <value>
                <fullName>Hijo</fullName>
            </value>
            <value>
                <fullName>Madre</fullName>
            </value>
            <value>
                <fullName>Padre</fullName>
            </value>
            <value>
                <fullName>Pareja</fullName>
            </value>
            <value>
                <fullName>P1</fullName>
                <isActive>false</isActive>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <isActive>false</isActive>
                <label>P2</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <isActive>false</isActive>
                <label>P3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>