force-app/main/default/objects/GLBP1_Beneficiario_de_Poliza__c/fields/GLB_P1_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Rut__c</fullName>
    <label>Rut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>