force-app/main/default/objects/GLBP1_Beneficiario_de_Poliza__c/fields/GLB_P1_Sexo__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>